crates/elif-macros/tests/ui/bootstrap_non_result.stderr
error: Bootstrap macro requires functions to return Result<(), HttpError>

       💡 Change your function signature to:
       async fn main() -> Result<(), HttpError> {}
 --> tests/ui/bootstrap_non_result.rs:3:1
  |
3 | #[elif::bootstrap(AppModule)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `elif::bootstrap` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `elif::prelude::*`
 --> tests/ui/bootstrap_non_result.rs:1:5
  |
1 | use elif::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/bootstrap_non_result.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/bootstrap_non_result.rs`
