crates/elif-macros/tests/ui/bootstrap_non_result.rs
use elif::prelude::*;

#[elif::bootstrap(AppModule)]
async fn main() {
    // This should fail because the function doesn't return Result
}